Oops. Fixed the item positioning so the Isaac window is not covering anything

--- a/css/_items.scss
+++ b/css/_items.scss
@@ -78,7 +78,7 @@
 
 .main {
   .item {
-    padding: 12px 15px 0 0;
+    padding: 0px 15px 0 0;
     ul {
       &:before {
         width: 10%;
