--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ a {
     display: inline-block; }
 
 .main .item {
-  padding: 12px 15px 0 0; }
+  padding: 0px 15px 0 0; }
   .main .item ul:before {
     width: 10%; }
   .main .item li {
